[package]
name = "mat-parrot"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
matrix-sdk = { version = "0.8.0", default-features = false, features = ["rustls-tls", "e2e-encryption", "bundled-sqlite"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
